# trabalho-final-grupo-07

./: .env.dev.example  .env.ec2.example  .env.prod.example  .gitignore  README.md  docker-compose-dev.yml  docker-compose-infra.yml  docker-compose.ec2-gameservice.yml  docker-compose.ec2-gateway.yml  docker-compose.ec2-kafka.yml  docker-compose.ec2-redis.yml  docker-compose.ec2-userdb-primary.yml  docker-compose.ec2-userdb-replica.yml  docker-compose.ec2-userservice.yml  docker-compose.prod.yml  docker-compse.ec2-shards.yml  download_questions.py  insert_questions.py  nginx.conf  test_services.py
apigateway/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
apigateway/app/api/websocket/: handshake.py  ws_proxy.py
apigateway/app/clients/: game_service_client.py
apigateway/app/core/: config.py  security.py
apigateway/app/dependencies/: auth_deps.py  grpc_deps.py
apigateway/app/mappers/: error_mapper.py
apigateway/app/middleware/: error_handler.py
apigateway/app/services/: identity_guard.py
apigateway/test/integration/: test_room_endpoints.py
apigateway/test/unit/: test_erro_handler.py  test_error_mapper.py  test_exceptions.py  test_handshake.py  test_identity_guard.py  test_main_routes.py  test_schemas.py
contracts/: FrontEnd.md  GameService.md  apigateway.md
front-end/: README.md
game-service/: README.md
infra/: .env.example  README.md  docker-compose.yml
questions/: arts_and_literature.json  film_and_tv.json  food_and_drink.json  general_knowledge.json  geography.json  history.json  music.json  science.json  society_and_culture.json  (+1 more)
(+63 files in other folders)
